Style blog to match nate.green terminal aesthetic
- Add custom CSS with terminal color scheme and monospace fonts
- Update homepage with terminal-style whoami command
- Style post links with terminal prompt syntax
- Match gradient background and green accent colors from main site

--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,16 @@ baseURL = 'https://mrilikecoding.github.io/ng-blog/'
 languageCode = 'en-us'
 title = 'nate.green'
 theme = 'risotto'
+
+[params]
+noindex = false
+
+[params.theme]
+palette = 'base16-dark'
+
+[params.about]
+title = "nate.green"
+description = "terminal-inspired blog"
+
+[markup.goldmark.renderer]
+unsafe = true
