Simplify blog design: remove sidebar, clean up terminal styling
- Remove sidebar completely for cleaner full-width layout
- Update header to show 'nate.green - blog'
- Remove $ symbols from post links for simplified aesthetic
- Change 'ls posts/' to 'view all posts' for better UX
- Maintain terminal color scheme and typography

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://mrilikecoding.github.io/ng-blog/'
 languageCode = 'en-us'
-title = 'nate.green'
+title = 'nate.green - blog'
 theme = 'risotto'
 
 [params]
