Fix markdown rendering configuration
- Update Hugo config with proper Goldmark markdown settings
- Enable markdown extensions (tables, footnotes, task lists, etc.)
- Convert post frontmatter from TOML to YAML format
- Add proper markdown parser and renderer configuration

--- a/hugo.toml
+++ b/hugo.toml
@@ -13,5 +13,28 @@ palette = 'base16-dark'
 title = "nate.green"
 description = "terminal-inspired blog"
 
+[markup]
+[markup.goldmark]
 [markup.goldmark.renderer]
 unsafe = true
+hardWraps = false
+xhtml = false
+
+[markup.goldmark.parser]
+autoHeadingID = true
+autoHeadingIDType = "github"
+
+[markup.goldmark.extensions]
+definitionList = true
+footnote = true
+linkify = true
+strikethrough = true
+table = true
+taskList = true
+typographer = true
+
+[markup.highlight]
+style = "github"
+lineNos = false
+lineNumbersInTable = false
+noClasses = false
