Update blog title to 'lab notes' and add main site link
- Change blog title from 'blog' to 'lab notes' to match experimental theme
- Split header into two clickable parts: nate.green (→ main site) and lab notes (→ blog home)
- Add CSS styling for both links with hover effects
- Maintain terminal green color scheme throughout
- Improve navigation UX between main site and blog

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://mrilikecoding.github.io/ng-blog/'
 languageCode = 'en-us'
-title = 'nate.green - blog'
+title = 'nate.green - lab notes'
 theme = 'risotto'
 
 [params]
